WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141197
Passing invalid values to OfflineAudioContext's constructor should not crash.
https://bugs.webkit.org/show_bug.cgi?id=141197
Summary
Passing invalid values to OfflineAudioContext's constructor should not crash.
Jer Noble
Reported
2015-02-03 08:24:04 PST
Passing invalid values to OfflineAudioContext's constructor should not crash.
Attachments
Patch
(4.48 KB, patch)
2015-02-03 08:25 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-02-03 08:25:33 PST
Created
attachment 245940
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-03 13:10:18 PST
Comment on
attachment 245940
[details]
Patch Clearing flags on attachment: 245940 Committed
r179565
: <
http://trac.webkit.org/changeset/179565
>
WebKit Commit Bot
Comment 3
2015-02-03 13:10:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug